--- a/cog.yaml
+++ b/cog.yaml
@@ -6,5 +6,5 @@ build:
   run:
     # CMAKE_PREFIX_PATH fix is from https://github.com/readthedocs/readthedocs.org/issues/5867
     - "git clone https://github.com/BachiLi/diffvg && cd diffvg && git submodule update --init --recursive && CMAKE_PREFIX_PATH=$(pyenv prefix) DIFFVG_CUDA=1 python setup.py install"
-predict: "cogrun.py:Predictor"
-prompt: "cogrun.py:Predictor"
+# predict: "cogrun.py:BasePixrayPredictor"
+predict: "cogrun.py:PixrayVqgan"
