--- a/cog.yaml
+++ b/cog.yaml
@@ -8,4 +8,5 @@ build:
     - "git clone https://github.com/BachiLi/diffvg && cd diffvg && git submodule update --init --recursive && CMAKE_PREFIX_PATH=$(pyenv prefix) DIFFVG_CUDA=1 python setup.py install"
 # predict: "cogrun.py:BasePixrayPredictor"
 # predict: "cogrun.py:PixrayVqgan"
-predict: "cogrun.py:PixrayPixel"
+# predict: "cogrun.py:PixrayPixel"
+predict: "cogrun.py:Text2Image"
