--- a/cog.yaml
+++ b/cog.yaml
@@ -6,11 +6,13 @@ build:
   run:
     # CMAKE_PREFIX_PATH fix is from https://github.com/readthedocs/readthedocs.org/issues/5867
     - "git clone https://github.com/pixray/diffvg && cd diffvg && git submodule update --init --recursive && CMAKE_PREFIX_PATH=$(pyenv prefix) DIFFVG_CUDA=1 python setup.py install"
+    - "apt-get update"
+    - "apt install -y libgl1-mesa-glx"
 # predict: "cogrun.py:BasePixrayPredictor"
 # predict: "cogrun.py:PixrayVqgan"
 # predict: "cogrun.py:PixrayPixel"
 # predict: "cogrun.py:Text2Image"
 # predict: "cogrun.py:Text2Pixel"
-# predict: "cogrun.py:PixrayRaw"
+predict: "cogrun.py:PixrayRaw"
 # predict: "cog_genesis.py:GenesisPredictor"
-predict: "cogrun.py:PixrayApi"
+# predict: "cogrun.py:PixrayApi"
