--- a/cog.yaml
+++ b/cog.yaml
@@ -13,6 +13,7 @@ build:
 # predict: "cogrun.py:PixrayPixel"
 # predict: "cogrun.py:Text2Image"
 # predict: "cogrun.py:Text2Pixel"
-predict: "cogrun.py:PixrayRaw"
+# predict: "cogrun.py:PixrayRaw"
 # predict: "cog_genesis.py:GenesisPredictor"
 # predict: "cogrun.py:PixrayApi"
+predict: "cogrun.py:Tiler"
