--- a/cog.yaml
+++ b/cog.yaml
@@ -1,10 +1,12 @@
 build:
   gpu: true
-  cuda: "10.2"
+  cuda: "11.1"
   python_version: "3.8"
   python_requirements: "requirements.txt"
   run:
     # CMAKE_PREFIX_PATH fix is from https://github.com/readthedocs/readthedocs.org/issues/5867
+    - "apt-get update"
+    - "apt install -y libgl1-mesa-glx"
     - "git clone https://github.com/pixray/diffvg && cd diffvg && git submodule update --init --recursive && CMAKE_PREFIX_PATH=$(pyenv prefix) DIFFVG_CUDA=1 python setup.py install"
 # predict: "cogrun.py:BasePixrayPredictor"
 # predict: "cogrun.py:PixrayVqgan"
@@ -12,6 +14,6 @@ build:
 # predict: "cogrun.py:Text2Image"
 # predict: "cogrun.py:Text2Pixel"
 # predict: "cogrun.py:PixrayRaw"
-# predict: "cog_genesis.py:GenesisPredictor"
+predict: "cog_genesis.py:GenesisPredictor"
 # predict: "cogrun.py:PixrayApi"
-predict: "cogrun.py:Tiler"
+# predict: "cogrun.py:Tiler"
