--- a/cogs/tiler_pixel.yaml
+++ b/cogs/tiler_pixel.yaml
@@ -2,6 +2,6 @@ drawer: pixel
 display_every: 10
 output: outputs/tiler_pixel.png
 quality: better
-color_mapper: wallpaper
+filters: wallpaper
 pixel_size: [64, 64]
 size: [256, 256]
