--- a/cogs/tiler_fft.yaml
+++ b/cogs/tiler_fft.yaml
@@ -2,5 +2,5 @@ drawer: fft
 display_every: 10
 output: outputs/tiler_fft.png
 quality: better
-color_mapper: wallpaper
+filters: wallpaper
 size: [720, 720]
