--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
+### THIS IS THE SAME AS REQUIREMENTS.TXT but with a different version of cuda (102) for cog
+
 # these are minimal requirements for just the VQGAN drawer
 
 -f https://download.pytorch.org/whl/torch_stable.html
-torch==1.10.0+cu111
-torchvision==0.11.1+cu111
-torchtext==0.11.0
+torch==1.9.0+cu102
+torchvision==0.10.0+cu102
+torchtext==0.10.0
 
 numpy==1.19.4
 tqdm==4.49.0
