cog.yaml cleanup

--- a/cog.yaml
+++ b/cog.yaml
@@ -8,13 +8,13 @@ build:
     - "apt-get update"
     - "apt install -y libgl1-mesa-glx"
     - "git clone https://github.com/pixray/diffvg && cd diffvg && git submodule update --init --recursive && CMAKE_PREFIX_PATH=$(pyenv prefix) DIFFVG_CUDA=1 python setup.py install"
-# predict: "cogrun.py:Text2Image"
+predict: "cogrun.py:Text2Image"
 # predict: "cogrun.py:Text2Pixel"
 # predict: "cog_genesis.py:GenesisPredictor"
 # predict: "cogrun.py:PixrayApi"
-predict: "cogrun.py:Tiler"
+# predict: "cogrun.py:Tiler"
+# predict: "cogrun.py:PixrayRaw"
 # OLDSTUFF
 # predict: "cogrun.py:BasePixrayPredictor"
 # predict: "cogrun.py:PixrayVqgan"
 # predict: "cogrun.py:PixrayPixel"
-# predict: "cogrun.py:PixrayRaw"
