--- a/cog.yaml
+++ b/cog.yaml
@@ -8,12 +8,14 @@ build:
     - "apt-get update"
     - "apt install -y libgl1-mesa-glx"
     - "git clone https://github.com/pixray/diffvg && cd diffvg && git submodule update --init --recursive && CMAKE_PREFIX_PATH=$(pyenv prefix) DIFFVG_CUDA=1 python setup.py install"
-predict: "cogrun.py:Text2Image"
+    - "git clone https://github.com/pixray/v-diffusion-pytorch"
+# predict: "cogrun.py:Text2Image"
 # predict: "cogrun.py:Text2Pixel"
 # predict: "cog_genesis.py:GenesisPredictor"
 # predict: "cogrun.py:PixrayApi"
 # predict: "cogrun.py:Tiler"
 # predict: "cogrun.py:PixrayRaw"
+predict: "cogrun.py:PixrayVdiff"
 # OLDSTUFF
 # predict: "cogrun.py:BasePixrayPredictor"
 # predict: "cogrun.py:PixrayVqgan"
