--- a/cog.yaml
+++ b/cog.yaml
@@ -2,13 +2,12 @@ build:
   gpu: true
   cuda: "10.2"
   python_version: "3.8"
-  python_requirements: "requirements_cog.txt"
+  python_requirements: "requirements.txt"
   run:
     # CMAKE_PREFIX_PATH fix is from https://github.com/readthedocs/readthedocs.org/issues/5867
     - "apt-get update"
     - "apt install -y libgl1-mesa-glx"
     - "git clone https://github.com/pixray/diffvg && cd diffvg && git submodule update --init --recursive && CMAKE_PREFIX_PATH=$(pyenv prefix) DIFFVG_CUDA=1 python setup.py install"
-    - "git clone https://github.com/pixray/v-diffusion-pytorch"
 # predict: "cogrun.py:Text2Image"
 # predict: "cogrun.py:Text2Pixel"
 # predict: "cog_genesis.py:GenesisPredictor"
