--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,8 @@
 # these are minimal requirements for just the VQGAN drawer
 
 -f https://download.pytorch.org/whl/torch_stable.html
-torch==1.9.0+cu102
-torchvision==0.10.0+cu102
+torch==1.9.0
+torchvision==0.10.0
 torchtext==0.10.0
 
 numpy==1.19.4
