--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ scikit_learn==1.0
 scikit-image==0.18.3
 torch_optimizer==0.1.0
 torch-tools==0.1.5
+tokenizers==0.11.4
 
 # can use CompVis/taming-transformers when https://github.com/CompVis/taming-transformers/pull/81 is merged
 git+https://github.com/bfirsh/taming-transformers.git@7a6e64ee
@@ -53,3 +54,10 @@ timm
 
 # resmem loss
 resmem
+
+# draw bonus
+basicsr
+
+# dev
+jupyter
+jedi==0.17.2
