associate cog predictors with replicate images

--- a/cog.yaml
+++ b/cog.yaml
@@ -7,13 +7,25 @@ build:
     - "apt-get update && apt install -y libgl1-mesa-glx"
     # CMAKE_PREFIX_PATH fix is from https://github.com/readthedocs/readthedocs.org/issues/5867
     - "git clone https://github.com/pixray/diffvg && cd diffvg && git submodule update --init --recursive && CMAKE_PREFIX_PATH=$(pyenv prefix) DIFFVG_CUDA=1 python setup.py install && pip install basicsr"
-# predict: "cogrun.py:Text2Image"
-# predict: "cogrun.py:Text2Pixel"
-# predict: "cog_genesis.py:GenesisPredictor"
+
+# image: "r8.im/pixray/api"
 # predict: "cogrun.py:PixrayApi"
+
+# image: "r8.im/pixray/text2image"
+# predict: "cogrun.py:Text2Image"
+
+# image: "r8.im/dribnet/pixray-text2pixel"
+# predict: "cogrun.py:Text2Pixel"
+
+# image: "r8.im/dribnet/pixray-genesis"
+# predict: "cog_genesis.py:GenesisPredictor"
+
+# image: "r8.im/dribnet/pixray-tiler"
 # predict: "cogrun.py:Tiler"
+
 # predict: "cogrun.py:PixrayRaw"
-predict: "cogrun.py:PixrayVdiff"
+# predict: "cogrun.py:PixrayVdiff"
+
 # OLDSTUFF
 # predict: "cogrun.py:BasePixrayPredictor"
 # predict: "cogrun.py:PixrayVqgan"
