Half working text2image cog

--- a/cog.yaml
+++ b/cog.yaml
@@ -12,7 +12,8 @@ build:
 # predict: "cogrun.py:PixrayApi"
 
 # image: "r8.im/pixray/text2image"
-# predict: "cogrun.py:Text2Image"
+image: "r8.im/pixray/text2image-future"
+predict: "cogrun.py:Text2Image"
 
 # image: "r8.im/dribnet/pixray-text2pixel"
 # predict: "cogrun.py:Text2Pixel"
