--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -12,10 +12,10 @@ jobs:
           submodules: 'recursive'
 
       - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
+      - uses: actions/setup-python@v2
+      - with:
           python-version: '3.10'
           cache: 'pip'
 
       - name: Install dependencies
-        run: pip install -r requirements.txt
+      - run: pip install -r requirements.txt
