--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -19,3 +19,6 @@ jobs:
 
       - name: Install dependencies
         run: pip install -r requirements.txt
+
+      - name: Run unit tests
+        run: python -m unittest
