--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,8 @@ git+https://github.com/bfirsh/taming-transformers.git@7a6e64ee
 git+https://github.com/openai/CLIP
 git+https://github.com/pvigier/perlin-numpy@6f077f8
 
+git+https://github.com/pvigier/perlin-numpy
+
 # diffvg: these are minimal requirements for just the pixeldraw / linedraw etc drawers
 
 # DO THIS: "git clone https://github.com/pixray/diffvg && cd diffvg && git submodule update --init --recursive && CMAKE_PREFIX_PATH=$(pyenv prefix) DIFFVG_CUDA=1 python setup.py install"
