--- a/cogs/hello_pixray.yaml
+++ b/cogs/hello_pixray.yaml
@@ -2,4 +2,4 @@ quality: "draft"
 drawer: vqgan
 iterations: 100
 prompts: "sunset in the city"
-output: outputs/hello_pixray.png
+#output: outputs/hello_pixray.png
