--- a/cogs/tiler_fft_shift.yaml
+++ b/cogs/tiler_fft_shift.yaml
@@ -2,7 +2,7 @@ drawer: fft
 fft_use: dwt
 fft_wave: dmey
 display_every: 10
-output: outputs/tiler_fft.png
+#output: outputs/tiler_fft.png
 quality: better
 filters: wallpaper
 size: [720, 360]
